## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_LDFLAGS = @XERCES_LDFLAGS@
if XERCES_FOUND
LIBS = -lxerces-c
endif



AM_CFLAGS =\
	 -Wall\
	 -g

LIBS = @XERCES_C_LIBS@

bin_PROGRAMS = crisprtools

crisprtools_SOURCES = \
	main.cpp \
	StlExt.h \
	MergeTool.cpp \
	MergeTool.h \
	SplitTool.cpp \
	SplitTool.h \
	FilterTool.cpp \
	FilterTool.h \
	ExtractTool.cpp \
	ExtractTool.h \
	SanitiseTool.cpp \
	SanitiseTool.h \
	DrawTool.cpp \
	DrawTool.h \
	StatTool.cpp \
	StatTool.h \
	CrassXML.h \
	CrassXML.cpp \
	CrisprException.h \
	CrisprException.cpp 


crisprtools_LDFLAGS = 

crisprtools_LDADD =  

